--- a/deployment/docker_compose/docker-compose.dev.yml
+++ b/deployment/docker_compose/docker-compose.dev.yml
@@ -77,6 +77,8 @@ services:
       - DISABLE_RERANK_FOR_STREAMING=${DISABLE_RERANK_FOR_STREAMING:-}
       - MODEL_SERVER_HOST=${MODEL_SERVER_HOST:-inference_model_server}
       - MODEL_SERVER_PORT=${MODEL_SERVER_PORT:-}
+      - INTENT_MODEL_VERSION="/Users/yashshah/danswer/backend/intent_model/pytorch_model"
+      - IS_LOCAL_INTENT_MODEL_PATH="true"
       # Leave this on pretty please? Nothing sensitive is collected!
       # https://docs.danswer.dev/more/telemetry
       - DISABLE_TELEMETRY=${DISABLE_TELEMETRY:-}
@@ -195,6 +197,8 @@ services:
 
       # Enterprise Edition stuff
       - ENABLE_PAID_ENTERPRISE_EDITION_FEATURES=${ENABLE_PAID_ENTERPRISE_EDITION_FEATURES:-false}
+      - INTENT_MODEL_VERSION="/Users/yashshah/danswer/backend/intent_model/pytorch_model"
+      - IS_LOCAL_INTENT_MODEL_PATH="true"
     extra_hosts:
       - "host.docker.internal:host-gateway"
     logging:
@@ -249,6 +253,8 @@ services:
       - MIN_THREADS_ML_MODELS=${MIN_THREADS_ML_MODELS:-}
       # Set to debug to get more fine-grained logs
       - LOG_LEVEL=${LOG_LEVEL:-info}
+      - INTENT_MODEL_VERSION="/Users/yashshah/danswer/backend/intent_model/pytorch_model"
+      - IS_LOCAL_INTENT_MODEL_PATH="true"
     volumes:
       # Not necessary, this is just to reduce download time during startup
       - model_cache_huggingface:/root/.cache/huggingface/
